tests/errors/tc_expr_input_complex.lx
@module "main"

pub const main -> fn () int {
    input<*int>("say something");
    return 0;
}
